# nvidia-pipecat-notebooks

./: .gitignore  README.md  plan.md  pyproject.toml
notebooks/: template.ipynb
notebooks/0-Setup/: NIM-Intro.ipynb  README.md  code.ipynb  note.txt  template.ipynb
notebooks/1-Foundations of Digital Human Agents/: 1-0-Introduction-Digital-Humans-NVIDIA-ACE-Ecosystem.ipynb  1-1-Introduction-ACE-Controller-Pipecat.ipynb  1-AI-Fundamentals-For-Digital-Humans.ipynb  1.1-AI-Fundamentals-For-Digital-Humans.ipynb  2-NVIDIA-Pipecat-Basics.ipynb  ASR-basics.ipynb  note.txt
notebooks/2-speech/: 0-Primer-NVIDIA-Pipecat.ipynb  1-ASR-basics.ipynb  2-1-RivaTTSService.ipynb  2-2-WIP-RivaASRService.ipynb  2-TTS-basics.ipynb  3-Voice-Agent.ipynb  ASR.ipynb  README.md  TTS.ipynb  draft-technical-info.ipynb  voice-agent.ipynb
notebooks/3-Context-and-Guardrails/: 3.1-LLMs.ipynb  3.2-Guardrails.ipynb  3.3-Mind-of-Agent.ipynb  3.3-placeholder.ipynb
notebooks/3-LLM-RAG/: 1-LLMs.ipynb  2-Guardrails.ipynb  3-RAG.ipynb  3.1-LLMs.ipynb  3.2-Guardrails.ipynb  Guardrails.ipynb  WIP-do-not-run.ipynb  plan.txt  scratch.py  test.ipynb  tryit.ipynb
notebooks/4-Multimodal-RAG/: 3.3-RAG-init.ipynb  4.0-RAG-Overview.ipynb  4.1-RAG-Implementation.ipynb  4.2-Multimodal-Integration.ipynb  RAG-from-mod-3.ipynb  TODO-RAG.ipynb
notebooks/5-Advanced-Features-QC/: Function-Calling.ipynb
