[project]
name = "ace-controller-nb"
version = "0.1.0"
description = "ACE Controller Teaching Kit"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab",
    "notebook",
    "ipykernel"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"] 